--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mocha": "^3.2.0"
   },
   "dependencies": {
-    "amorph": "^0.1.3"
+    "amorph": "^0.2.0",
+    "cross-converter": "0.0.1",
+    "testable-error": "0.0.3"
   }
 }
