--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "amorph-bignumber": "0.0.3",
+    "amorph-bignumber": "^1.0.0",
     "chai": "^3.5.0",
     "chai-amorph": "0.0.1",
     "mocha": "^3.2.0"
   },
   "dependencies": {
-    "amorph": "^0.2.0",
+    "amorph": "^1.0.0",
     "cross-converter": "0.0.5",
     "q": "^1.4.1",
     "testable-error": "0.0.3"
