--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "mocha": "^3.2.0"
   },
   "dependencies": {
-    "amorph": "^1.1.1",
+    "amorph": "^1.3.1",
     "arguguard": "^2.0.1",
-    "cross-converter": "0.0.5",
+    "cross-converter": "^0.0.5",
+    "nobject": "^0.1.0",
     "q": "^1.4.1",
-    "testable-error": "0.0.3"
+    "testable-error": "^0.0.3"
   }
 }
